@@ -1,32 +1,31 @@
 package evovital.uniquindio.edu.co.servicios.implementaciones;
 
-import evovital.uniquindio.edu.co.domain.*;
+import evovital.uniquindio.edu.co.domain.HorarioAtencion;
+import evovital.uniquindio.edu.co.domain.Medico;
+import evovital.uniquindio.edu.co.domain.Mensaje;
 import evovital.uniquindio.edu.co.dto.consulta.ConsultaDTOAdmin;
-import evovital.uniquindio.edu.co.dto.horario.HorarioDTOActualizar;
-import evovital.uniquindio.edu.co.dto.horario.HorarioDTOCrear;
-import evovital.uniquindio.edu.co.dto.login.AuthLoginDto;
+import evovital.uniquindio.edu.co.dto.horario.HorarioDTO;
 import evovital.uniquindio.edu.co.dto.medico.InfoMedicoDTO;
-import evovital.uniquindio.edu.co.dto.medico.MedicoDTOActualizar;
+import evovital.uniquindio.edu.co.dto.medico.MedicoDTO;
 import evovital.uniquindio.edu.co.dto.medico.MedicoDTOAdmin;
-import evovital.uniquindio.edu.co.dto.medico.MedicoDTOCrear;
 import evovital.uniquindio.edu.co.dto.mensaje.MensajeDTOUsuario;
+import evovital.uniquindio.edu.co.dto.paciente.InfoPacienteDTO;
+import evovital.uniquindio.edu.co.dto.paciente.PacienteDTO;
 import evovital.uniquindio.edu.co.dto.pqrs.InfoPQRSDTO;
 import evovital.uniquindio.edu.co.dto.pqrs.PQRSDTOAdmin;
 import evovital.uniquindio.edu.co.repositories.*;
 import evovital.uniquindio.edu.co.servicios.especificaciones.AdministradorService;
 import evovital.uniquindio.edu.co.servicios.especificaciones.ImagenesService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.DayOfWeek;
-import java.time.LocalTime;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service // indica que esta clase es un servicio de manera semantica, se puede usar el "@Component"
 @RequiredArgsConstructor // genera un constructor con los atributos "final"
-@Transactional() // indica que las transacciones de esta clase son de solo lectura
 public class AdministradorServiceImpl implements AdministradorService {
 
     private final MedicoRepository medicoRepository;
@@ -35,7 +34,9 @@ public class AdministradorServiceImpl implements AdministradorService {
     private final MensajeRepository mensajeRepository;
     private final UsuarioRepository usuarioRepository;
     private final HorarioAtencionRepository horarioAtencionRepository;
-    private final AdminRepository adminRepository;
+    private final ConsultaRepository consultaRepository;
+    private final PacienteRepository pacienteRepository;
+
     private final ImagenesService imagenesService;
 
     /**
@@ -45,17 +46,26 @@ public class AdministradorServiceImpl implements AdministradorService {
      * @throws Exception
      */
     @Override
-    public Long crearMedico(MedicoDTOCrear medico) throws Exception {
+    public Long crearMedico(MedicoDTO medico) throws Exception {
 
-        medicoRepository.findByCedulaOrEmail(medico.cedula(), medico.email()).ifPresent(m -> {
-            throw new RuntimeException("Ya existe un medico con esa cedula o ese email");
-        });
+        usuarioRepository.findByCedula(medico.cedula()).ifPresent(
+                usuario -> new RuntimeException("ya existe un usuario con esta cedula")
+        );
 
-        Medico medicoRegistrado = medicoRepository.save(medicoDTOCrearToMedico(medico));
+        usuarioRepository.findByEmail(medico.email()).ifPresent(
+                usuario -> new RuntimeException("ya existe un usuario con ese email")
+        );
+
+        Medico medicoAux = medico.toEntity();
+        medicoAux.setEstaActivo(true);
+        medicoAux.setEspecialidad( especialidadRepository.findById(medico.idEspecialidad()).orElseThrow( () -> new RuntimeException("no existe la especialidad solicitada") ));
+        medicoAux.setPassword(new BCryptPasswordEncoder().encode(medico.password()));
+
+        Medico medicoRegistrado = medicoRepository.save(medicoAux);
 
         if (!medico.horarios().isEmpty())
             medico.horarios().forEach(
-                    horario -> crearHorario(medicoRegistrado, horario)
+                    horario -> crearHorario(medicoRegistrado.getId(), horario)
             );
 
         return medicoRegistrado.getId();
@@ -69,25 +79,31 @@ public class AdministradorServiceImpl implements AdministradorService {
      * @throws Exception
      */
     @Override
-    public Long actualizarMedico(Long codigo, MedicoDTOActualizar medico) throws Exception {
+    public Long actualizarMedico(MedicoDTO medico) throws Exception {
 
-        Medico medicoEncontrado = medicoRepository.findById(codigo).orElseThrow(() -> new Exception("No se encontró el medico que se quiere actualizar"));
+        Medico medicoEncontrado = medicoRepository.findByIdAndEstaActivoTrue(medico.id()).orElseThrow(
+                () -> new Exception("No se encontró el medico que se quiere actualizar")
+        );
 
         if (!medicoEncontrado.getCedula().equals(medico.cedula()))
-            medicoRepository.findByCedula(medico.cedula()).ifPresent(m -> {
+            usuarioRepository.findByCedula(medico.cedula()).ifPresent(m -> {
                 throw new RuntimeException("Ya existe un medico con esa cedula");
             });
 
         if (!medicoEncontrado.getEmail().equals(medico.email()))
-            medicoRepository.findByEmail(medico.email()).ifPresent(m -> {
+            usuarioRepository.findByEmail(medico.email()).ifPresent(m -> {
                 throw new RuntimeException("Ya existe un medico con ese email");
             });
 
-        Medico medicoActualizado = medicoRepository.save(medicoDTOActualizarToMedico(medico));
+        Medico medicoAux = medico.toEntity();
+        medicoAux.setEspecialidad( especialidadRepository.findById(medico.idEspecialidad()).orElseThrow( () -> new RuntimeException("no existe la especialidad solicitada") ) );
+        medicoAux.setPassword( medicoEncontrado.getPassword() );
+        medicoAux.setEstaActivo( true );
+        Medico medicoActualizado = medicoRepository.save(medicoAux);
 
         if (!medico.horarios().isEmpty())
             medico.horarios().forEach(
-                    horario -> actualizarHorario(medicoActualizado, horario)
+                    horario -> actualizarHorario(medicoActualizado.getId(), horario)
             );
 
         return medicoActualizado.getId();
@@ -99,13 +115,14 @@ public class AdministradorServiceImpl implements AdministradorService {
      * @return
      * @throws Exception
      */
+    @Transactional
     @Override
-    public MedicoDTOCrear eliminarMedico(Long codigo) throws Exception {
+    public MedicoDTO eliminarMedico(Long codigo) throws Exception {
 
         Medico medico = medicoRepository.findById(codigo).orElseThrow(() -> new Exception("No se encontró el medico que se quiere eliminar"));
         medico.setEstaActivo(false);
 
-        return medicoToMedicoDTOCrear(medicoRepository.save(medico));
+        return new MedicoDTO(medicoRepository.save(medico));
     }
 
     /**
@@ -116,190 +133,130 @@ public class AdministradorServiceImpl implements AdministradorService {
     @Override
     public List<MedicoDTOAdmin> listarMedicos() throws Exception {
 
-        if (medicoRepository.count() == 0) throw new Exception("No hay medicos para listar");
+        if (medicoRepository.findAll().stream().count() == 0) throw new Exception("No hay medicos para listar");
 
-        return medicoRepository.findAllByEstaActivoTrue().stream().map(this::medicoToMedicoDTOAdmin).collect(Collectors.toList());
+        return medicoRepository.findAll().stream().map(MedicoDTOAdmin::new).toList();
     }
 
+    /**
+     * Obtiene la informacion de un medico en especifico
+     * @param codigo
+     * @return
+     * @throws Exception
+     */
+    @Transactional
     @Override
     public InfoMedicoDTO obtenerMedico(Long codigo) throws Exception {
-
-        return medicoToInfoMedicoDTO(
-                medicoRepository.findById(codigo).orElseThrow(
-                        () -> new Exception("No se encontró el medico que se quiere obtener")
-                )
-        );
-
+        return new InfoMedicoDTO( medicoRepository.findById(codigo).orElseThrow(
+                () -> new RuntimeException("No se encuentra el medico que se quiere obtener")
+        ) );
     }
 
+    /**
+     * Lista todas las PQRS que estan con estado "En proceso" en la base de datos
+     * @return
+     * @throws Exception
+     */
     @Override
     public List<PQRSDTOAdmin> listarPQRS() throws Exception {
 
-        if (pqrsRepository.count() == 0) throw new Exception("No hay PQRS para listar");
 
-        return pqrsRepository.findAll().stream().map(this::pqrsToPQRSDTOAdmin).collect(Collectors.toList());
+        if (pqrsRepository.findAll().stream().count() == 0) throw new Exception("No hay PQRS para listar");
 
+        return pqrsRepository.findAll().stream().map(PQRSDTOAdmin::new).collect(Collectors.toList());
     }
 
+    /**
+     * Responde una PQRS y devuelve el id del mensaje que se acaba de responder
+     * @param mensajeUsuario
+     * @return
+     * @throws Exception
+     */
     @Override
-    public String responderPQRS(Long idPqrs, MensajeDTOUsuario mensajeUsuario) throws Exception {
+    public Long responderPQRS(MensajeDTOUsuario mensajeUsuario) throws Exception {
 
-        Pqrs pqrs = pqrsRepository.findById(idPqrs).orElseThrow(() -> new Exception("No se encontro la PQRS"));
-        Mensaje mensaje = mensajeDTOToMensaje(mensajeUsuario);
-        mensaje.setPqrs(pqrs);
-        mensajeRepository.save(mensaje);
+        Mensaje mensaje = mensajeUsuario.toEntity();
+        mensaje.setUsuario(usuarioRepository.findById(mensajeUsuario.idUsuario()).orElseThrow(() -> new RuntimeException("No se encontró el usuario")));
+        mensaje.setPqrs(pqrsRepository.findById(mensajeUsuario.idPqrs()).orElseThrow(() -> new RuntimeException("No se encontró el pqrs")));
 
-        return mensaje.getContenido();
-
+        return mensajeRepository.save(mensaje).getId();
     }
 
+    /**
+     * Obtiene la informacion de una PQRS en especifico con sus mensajes incluidos
+     * @param idPQRS
+     * @return
+     * @throws Exception
+     */
+    @Transactional
     @Override
-    public InfoPQRSDTO verDetallePQRS(int codigo) throws Exception {
-        return null;
+    public InfoPQRSDTO verDetallePQRS(Long idPQRS) throws Exception {
+        return new InfoPQRSDTO(pqrsRepository.findById(idPQRS).orElseThrow(() -> new Exception("No se encontro la PQRS")));
     }
 
+    /**
+     * Lista todas las consultas que estan en la base de datos
+     * @return
+     * @throws Exception
+     */
     @Override
-    public List<ConsultaDTOAdmin> listarCitas() throws Exception {
-        return null;
+    public List<ConsultaDTOAdmin> listarConsultas() throws Exception {
+
+        if (consultaRepository.count() == 0) throw new Exception("No hay consultas para listar");
+
+        return consultaRepository.findAll().stream().map(ConsultaDTOAdmin::new).toList();
     }
 
+    /**
+     * crea un horario para un medico en particular
+     * @param idMedico
+     * @param horario
+     * @return el id del horario que se acaba de crear
+     */
     @Override
-    public void crearHorario(Medico medico, HorarioDTOCrear horario) {
+    public Long crearHorario(Long idMedico, HorarioDTO horario) {
 
-        HorarioAtencion horarioAtencion = horarioDTOToHorarioAtencion(horario);
-        horarioAtencion.setMedico(medico);
+        HorarioAtencion horarioAtencion = horario.toEntity();
+        horarioAtencion.setMedico(medicoRepository.findById(idMedico).orElseThrow(() -> new RuntimeException("No se encontro el medico")));
 
-        horarioAtencionRepository.save(horarioAtencion);
+        HorarioAtencion horarioAtencionCreado = horarioAtencionRepository.save(horarioAtencion);
+        return horarioAtencionCreado.getId();
     }
 
+    /**
+     * Actualiza un horario de un medico en particular
+     * @param idMedico
+     * @param horario
+     * @return el id del horario que se acaba de actualizar
+     */
     @Override
-    public void actualizarHorario(Medico medico, HorarioDTOActualizar horario) {
+    public Long actualizarHorario(Long idMedico, HorarioDTO horario) {
 
-        HorarioAtencion horarioAtencion = horarioDTOActualizarToHorarioAtencion(horario);
-        horarioAtencion.setMedico(medico);
+        HorarioAtencion horarioAtencion = horario.toEntity();
+        horarioAtencion.setMedico(medicoRepository.findById(idMedico).orElseThrow(() -> new RuntimeException("No se encontro el medico")));
 
-        horarioAtencionRepository.save(horarioAtencion);
+        HorarioAtencion horarioAtencionActualizado = horarioAtencionRepository.save(horarioAtencion);
+        return horarioAtencionActualizado.getId();
 
     }
 
+    /**
+     * Lista todos los pacientes que estan en la base de datos
+     * @return
+     */
     @Override
-    public boolean isAdmin(AuthLoginDto loginDto) {
-        return adminRepository.existsByEmailAndPassword(loginDto.email(), loginDto.password());
+    public List<InfoPacienteDTO> listarPacientes() {
+        return pacienteRepository.findAll().stream().map(InfoPacienteDTO::new).toList();
     }
 
+    /**
+     * Obtiene la informacion de un paciente en especifico
+     * @param idPaciente
+     * @return
+     */
     @Override
-    public Administrador signIn(AuthLoginDto loginDto) {
-        return adminRepository.getByEmailAndPassword(loginDto.email(), loginDto.password());
+    public PacienteDTO obtenerDetallePaciente(Long idPaciente) {
+        return pacienteRepository.findById(idPaciente).map(PacienteDTO::new).orElseThrow(() -> new RuntimeException("No se encontro el paciente"));
     }
 
-    private Medico medicoDTOCrearToMedico(MedicoDTOCrear medico) throws Exception {
-
-        return Medico.builder()
-                .estaActivo(true)
-                .cedula(medico.cedula())
-                .nombre(medico.nombre())
-                .email(medico.email())
-                .password(medico.password())
-                .ciudadResidencia(medico.ciudadResidencia())
-                .telefono(medico.telefono())
-                .urlFotoPersonal(imagenesService.subirImagen(imagenesService.convertirImagen(medico.fotoPersonal())))
-                .especialidad(especialidadRepository.findById(medico.idEspecialidad()).orElseThrow(() -> new Exception("No se encontro la especialidad")))
-                .build();
-    }
-
-    private Medico medicoDTOActualizarToMedico(MedicoDTOActualizar medico) throws Exception {
-
-        return Medico.builder()
-                .id(medico.id())
-                .estaActivo(true)
-                .cedula(medico.cedula())
-                .nombre(medico.nombre())
-                .email(medico.email())
-                .password(medico.password())
-                .ciudadResidencia(medico.ciudadResidencia())
-                .telefono(medico.telefono())
-                .urlFotoPersonal(imagenesService.subirImagen(imagenesService.convertirImagen(medico.fotoPersonal())))
-                .especialidad(especialidadRepository.findById(medico.idEspecialidad()).orElseThrow(() -> new Exception("No se encontro la especialidad")))
-                .build();
-    }
-
-    private MedicoDTOCrear medicoToMedicoDTOCrear(Medico medico) throws Exception {
-
-        return new MedicoDTOCrear(
-                medico.getCedula(),
-                medico.getNombre(),
-                medico.getEmail(),
-                medico.getPassword(),
-                medico.getCiudadResidencia(),
-                medico.getTelefono(),
-                medico.getUrlFotoPersonal(),
-                medico.getEspecialidad().getId(),
-                medico.getHorarios().stream().map(this::horarioAtencionToHorarioDTO).collect(Collectors.toList())
-        );
-    }
-
-    private HorarioAtencion horarioDTOActualizarToHorarioAtencion(HorarioDTOActualizar horario) {
-        return HorarioAtencion.builder()
-                        .id(horario.id())
-                        .dia(DayOfWeek.of(horario.dia()))
-                        .inicio(LocalTime.parse("%s:00".formatted(horario.horaInicio())))
-                        .fin(LocalTime.parse("%s:00".formatted(horario.horaSalida())))
-                        .build();
-    }
-
-    private HorarioDTOCrear horarioAtencionToHorarioDTO(HorarioAtencion horario) {
-        return new HorarioDTOCrear(
-                (byte) horario.getDia().getValue(),
-                horario.getInicio().toString(),
-                horario.getFin().toString()
-        );
-    }
-
-    private HorarioAtencion horarioDTOToHorarioAtencion(HorarioDTOCrear horario) {
-        return HorarioAtencion.builder()
-                        .dia(DayOfWeek.of(horario.dia()))
-                        .inicio(LocalTime.parse("%s:00".formatted(horario.horaInicio())))
-                        .fin(LocalTime.parse("%s:00".formatted(horario.horaSalida())))
-                        .build();
-    }
-
-    private InfoMedicoDTO medicoToInfoMedicoDTO(Medico medico) {
-        return new InfoMedicoDTO(
-                medico.getId(),
-                medico.getNombre(),
-                medico.getCedula(),
-                medico.getCiudadResidencia(),
-                medico.getEspecialidad().getNombre(),
-                medico.getTelefono(),
-                medico.getEmail(),
-                medico.getHorarios().stream().map(this::horarioAtencionToHorarioDTO).collect(Collectors.toList())
-        );
-    }
-
-    private MedicoDTOAdmin medicoToMedicoDTOAdmin(Medico medico) {
-        return new MedicoDTOAdmin(
-                medico.getId(),
-                medico.getNombre(),
-                medico.getUrlFotoPersonal(),
-                medico.getEspecialidad().getNombre()
-        );
-    }
-
-    private PQRSDTOAdmin pqrsToPQRSDTOAdmin(Pqrs pqrs) {
-        return new PQRSDTOAdmin(
-                pqrs.getId(),
-                pqrs.getEstadoPqrs().getEstado(),
-                pqrs.getFechaCreacion(),
-                pqrs.getConsulta().getPaciente().getNombre()
-        );
-    }
-
-    private Mensaje mensajeDTOToMensaje(MensajeDTOUsuario mensaje) {
-        return Mensaje.builder()
-                .contenido(mensaje.mensaje())
-                .horaYFecha(mensaje.fechaYHora())
-                .pqrs(pqrsRepository.findById(mensaje.idPqrs()).orElseThrow(() -> new RuntimeException("No se encontro la PQRS")))
-                .usuario(usuarioRepository.findById(mensaje.idUsuario()).orElseThrow(() -> new RuntimeException("No se encontro el usuario")))
-                .build();
-    }
 }
